Fixed bug that allowed introducion to display over the links div by adding a z-index

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -147,6 +147,7 @@ h2 {
     width: 100%;
     height: 75px;
     background-image: linear-gradient(to right, rgb(140, 251, 255), rgb(196, 253, 255), rgb(140, 251, 255));
+    z-index: 1;
 }
 
 #links a {
